# lumenote

./: .gitignore  README.md  ROADMAP.md  docker-compose.yml  package-lock.json  package.json  updater.json  vite.config.ts
.github/workflows/: docker-publish.yml  release.yml
server/: .dockerignore  Cargo.toml  Dockerfile  README.md
server/migrations/: 20260105000000_init.sql  20260105000001_add_workspaces.sql
server/src/: main.rs  models.rs
src/: App.tsx  main.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  test_output.txt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  exporter.rs  importer.rs  lib.rs  main.rs
src/__tests__/store/: useStore.test.ts
src/__tests__/utils/: api.test.ts  markdownUtils.test.ts
src/components/editor/: Editor.tsx  MarkdownEditor.tsx  Preview.tsx
src/components/layout/: ViewModeToggle.tsx
src/components/popups/: SettingsPopup.tsx  SharePopup.tsx  SyncPopup.tsx  WorkspaceModal.tsx
src/components/sidebar/: Sidebar.tsx  types.ts  utils.ts
src/components/sidebar/components/: ContextMenu.tsx  DropdownMenu.tsx  FolderChildrenWrapper.tsx  FolderItem.tsx  NoteItem.tsx  SortableItem.tsx  WorkspaceSwitcher.tsx
src/components/toolbar/: EditorToolbar.tsx
src/components/ui/: Modal.tsx
src/store/: useStore.ts
src/types/: index.ts
src/utils/: api.ts  i18n.ts  markdownUtils.ts
tests/: test_markdown.py
